--- a/src/main/resources/templates/thymeleaf/messageExpressions.html
+++ b/src/main/resources/templates/thymeleaf/messageExpressions.html
@@ -4,11 +4,12 @@
 		<th:block th:fragment="content">
 			<div class="card m-2">
 				<div class="card-header">
-					Home
+					Message Expressions
 				</div>
 				<div class="card-body">
-					<img th:src="@{/images/logo-springboot.png}" width="100px"/>
-					<hr/>
+					<h6>[[#{welcome}]]</h6>
+					<button class="btn btn-info btn-sm">[[#{btn.join}]]</button>
+					<button class="btn btn-info btn-sm" th:text="#{btn.join}"></button>
 				</div>
 			</div>
 		</th:block>
