--- a/src/main/resources/templates/thymeleaf/variableExpressions.html
+++ b/src/main/resources/templates/thymeleaf/variableExpressions.html
@@ -16,6 +16,7 @@
 						<!-- null일 경우 null로 출력 -->
 						<div th:text="${'Current user: ' +  session.sessionMid}"></div>
 						<div th:text="'Current user: ' + ${session.sessionMid}"></div>
+						<div th:text="|Current user: ${session.sessionMid}|"></div>
 						<!-- null일 경우 빈 공백으로 출력 -->
 						<div th:text="'Current user: ' + ((${session.sessionMid}) ? ${session.sessionMid} : '')"></div>
 						<div>Current user: [[${session.sessionMid}]]</div>
